fixing up padding on mobile

--- a/Form.css
+++ b/Form.css
@@ -147,6 +147,9 @@ p {
         height: 100%;
         width: 100%;
     }
+    .grid-item1 {
+        padding-top: 20px;
+    }
 }
 
 @media screen and (max-width:400px){
